--- a/app/src/main/res/layout/sub_fragment_medicine_layout.xml
+++ b/app/src/main/res/layout/sub_fragment_medicine_layout.xml
@@ -5,24 +5,75 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!-- Text View for medicine logging  -->
-    <TextView
-        android:id="@+id/add_medicine_label"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:text="Medicine intake"
-        android:textColor="#000000"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
 
+        <!-- Text View for medicine logging  -->
+        <TextView
+            android:id="@+id/add_medicine_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+            android:text="Medicine intake"
+            android:textColor="#000000"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <!-- Card View for medicine prescription reloading -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/add_medicine_reload_image_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="20dp">
+
+            <!-- Text View medicine prescription reloading text -->
+            <ImageView
+                android:id="@+id/add_medicine_reload_image_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/refresh_icon"
+                android:textColor="@color/white" />
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Card View for saving medicine intake -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/add_medicine_save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#00ff00"
+            app:cardCornerRadius="20dp">
+
+            <!-- Text View for saving medicine intake text -->
+            <TextView
+                android:id="@+id/add_medicine_save_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10dp"
+                android:background="#00ff00"
+                android:text="Save"
+                android:textColor="@color/black" />
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
     <!-- Card View for logging medicine_1 -->
     <androidx.cardview.widget.CardView
         android:id="@+id/add_medicine_card_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="40dp">
 
         <!-- Constraint Layout for logging medicine_1 -->
@@ -67,7 +118,7 @@
                 android:textAlignment="center"
                 android:textColor="#350069"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/add_medicine_field_1"
@@ -158,7 +209,7 @@
                 android:textAlignment="center"
                 android:textColor="#350069"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/add_medicine_field_2"
@@ -249,7 +300,7 @@
                 android:textAlignment="center"
                 android:textColor="#350069"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/add_medicine_field_3"
@@ -340,7 +391,7 @@
                 android:textAlignment="center"
                 android:textColor="#350069"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/add_medicine_field_4"
@@ -431,7 +482,7 @@
                 android:textAlignment="center"
                 android:textColor="#350069"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/add_medicine_field_5"
